Closed Bug 405182 Opened 18 years ago Closed 18 years ago

Crash [@ nsScriptLoader::ProcessScriptElement] with mutation events, removing root

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9beta2

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: crash, regression, testcase)

Crash Data

Attachments

(3 files, 1 obsolete file)

Loading the testcase makes Firefox crash [@ nsScriptLoader::ProcessScriptElement].
Flags: in-testsuite?
Flags: blocking1.9?
OS: Mac OS X → All
Hardware: PC → All
Attached patch fix? (obsolete) — Splinter Review
That looks pretty reasonable... Ask jst to check it out?
Blocks: dom-agnostic
Keywords: regression
Attachment #290032 - Flags: superreview?(jst)
Attachment #290032 - Flags: review?(jst)
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Comment on attachment 290032 [details] [diff] [review] fix? Yeah, looks good.
Attachment #290032 - Flags: superreview?(jst)
Attachment #290032 - Flags: superreview+
Attachment #290032 - Flags: review?(jst)
Attachment #290032 - Flags: review+
I'll land as soon as 'qm-win2k3-01' is green...
Assignee: nobody → mats.palmgren
Attachment #290032 - Attachment is obsolete: true
Status: NEW → ASSIGNED
mozilla/content/base/src/nsScriptLoader.cpp 1.111 mozilla/content/base/test/Makefile.in 1.34 mozilla/content/base/test/test_bug405182.html 1.1 -> FIXED
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite? → in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007120605 Minefield/3.0b2pre It also doesn't crash with the latest branch build.
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsScriptLoader::ProcessScriptElement]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: