Lookup default script language on the script global object when there is no root content. b=405182 r+sr=jst a=blocking1.9